# JD-Scanner

./: .gitignore  README.md  main.py  makefile  pyproject.toml
src/: __init__.py  chain.py  discord_sender.py  lang_prompt.py  lang_template.py  mapreduce_chain.py  text_splitter.py  token_counter.py
src/discord/: discord_sender.py
src/langchain/: chain.py  lang_prompt.py  mapreduce_chain.py
src/parser/: parser_bot.py
src/summarizer/: posting_summarizer.py
test/: discord_claude_test.py  discord_test.py
