[project]
name = "jd-scanner"
version = "0.0.2"
description = "- CLI 옵션 도입, 환경변수 기반 구성(MODEL_NAME, TEMPERATURE, DISCORD_ENABLED) - 로깅 표준화 - 스크래핑 재시도/백오프 + 원문/정제 텍스트 캐시(output/raw) - Discord 전송은 옵션화(--discord) 및 메시지 분할은 sender에서 처리"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "discord-py>=2.5.2",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-ollama>=0.3.3",
    "pip>=25.1.1",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
]
